4.5 -> 5.0:
    - rpm.org: fix whitespace-in-files issues in find-debuginfo.sh.
    - rpm.org: new debuginfo script.
    - jbj: update known arch's.
    - jbj: use rpmGetPath() to simplify generating filenames, nuke alloca.
    - jbj: pubkey headers were misidentified as source, not binary, headers.
    - rpm.org: report open error on signing explicitly (#155079).
    - rpm.org: fix for debugedit -l.
    - afb: handle Mac OS X 10.3.9 statvfs deviance.
    - rse: make devtool %standalone fully modular for allowing its modules to be reused in other devtool targets
    - jbj: assume that mount(2) et al are linux-peculier for the moment.
    - jbj: add rpmio Mount/Umount/Umount2 stubs.
    - jbj: permit keyutils caching disable, don't re-add if already cached.
    - jbj: use keyutils for pubkey cache.
    - jbj: update id.po (Translation Project).
    - jbj: teach --querytags to chain through headerCompoundFormats.
    - rse: apply upstream vendor Lua 5.1.2 patches 1-7
    - rse: add support for building against NEON >= 0.27.0
    - jbj: use keyutils to get password out of rpm's address space.
    - jbj: start ripping availablePackages.
    - jbj: rpmtsDbmode() and rpmtsSetDbmode() added for rpmts-py.c opaqueness.
    - jbj: start marking availablePackages for destruction.
    - jbj: make a pass checking rpmts opaqueness.
    - jbj: rpmtsGoal() and rpmtsSetGoal() added.
    - jbj: add rpmgiGetFlags() for opaque rpmgi queries.
    - jbj: permit --ftswalk on sign/verify paths. not yet install ...
    - jbj: use ftsOpts from CLI where rpmgi is used.
    - jbj: insure srpm file dispositions are FA_CREATE.
    - jbj: enable Header performance metrics, tied to --stats.
    - jbj: add Header performance metrics, disabled for now.
    - jbj: eliminate headerNVR, use headerNEVRA instead.
    - jbj: eliminate the rpmrbFoo, use rpmcliInstallFoo instead.
    - jbj: load/unload header macros for %{_sourcedir} et al expansions.